--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- header-section -->
+        <section class="banner-section">
+            <div class="text-align">
+                <h1>All Thinks Are Possible If You</h1> <h1>                      believe</h1>
+                <p>There are many variations of passages of Lorem Ipsum </p>
+                <p> but the majority have suffered alteration in some</p>
+                <p> form, by injected humour, or randomised words</p>
+                <button class="btn-primary">Contact Us</button>
+            </div>   
+        </section>
+        <!-- second-part -->
+        <section class="second-part">
+            <div>
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="text-align2">
+                <h1>My failures of <br> previous year</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                <p>Contrary to popular belief,is not simply.<br>Contrary to popular belief.<br>Contrary to popular , is not simply.<br> to popular belief, is not simply.</p>
+            </div>
+        </section><br><br><br><br><br>
+        <!-- third section -->
+        <div>
+            <h1>My Plans</h1>
+        </div>
+        <section class="icons-section">
+            <div>
+                <img src="images/icons/web.png" alt="">
+                <h2>Web Development</h2>
+                <small>I want to start</small>
+            </div>
+            <div>
+                <img src="images/icons/js.png" alt="">
+                <h2>Javascript</h2>
+                <small>I want to learn</small>
+            </div>
+            <div>
+                <img src="images/icons/smoke.png" alt="">
+                <h2>Smoking Habit</h2>
+                <small>I want to end</small>
+            </div>
+            <div>
+                <img src="images/icons/ecom.png" alt="">
+                <h2>Ecommerce</h2>
+                <small>I want to develop</small>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
