finaly code done

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
+    <!-- header section -->
     <header>
-        <!-- header-section -->
         <section class="banner-section">
             <div class="text-align">
-                <h6>All Thinks Are Possible If You</h6>
-                <h6> believe</h6>
+                <h1>All Thinks Are <br> Possible If You <br> believe</h1>
                 <p>There are many variations of passages of Lorem Ipsum </p>
                 <p> but the majority have suffered alteration in some</p>
                 <p> form, by injected humour, or randomised words</p>
@@ -23,63 +22,73 @@
             </div>
         </section>
     </header>
-    <!-- second-part -->
+    <!-- main section -->
     <main>
-        <section class="second-part">
-            <div>
+        <!-- My failure previous of year -->
+        <section class="text-description-img">
+            <div class="img-person">
                 <img src="images/person.png" alt="">
             </div>
-            <div class="text-align2">
+            <div class="text-description">
                 <h1>My failures of <br> previous year</h1>
                 <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of
                     <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
                 </p>
-                <p>Contrary to popular belief,is not simply.<br>Contrary to popular belief.<br>Contrary to popular , is
-                    not simply.<br> to popular belief, is not simply.</p>
-            </div>
-        </section><br><br><br><br><br>
-        <!-- third section -->
-        <div>
-            <h1>My Plans</h1>
-        </div>
-        <section class="icons-section">
-            <div>
-                <img src="images/icons/web.png" alt="">
-                <h2>Web Development</h2>
-                <small>I want to start</small>
-            </div>
-            <div>
-                <img src="images/icons/js.png" alt="">
-                <h2>Javascript</h2>
-                <small>I want to learn</small>
-            </div>
-            <div>
-                <img src="images/icons/smoke.png" alt="">
-                <h2>Smoking Habit</h2>
-                <small>I want to end</small>
-            </div>
-            <div>
-                <img src="images/icons/ecom.png" alt="">
-                <h2>Ecommerce</h2>
-                <small>I want to develop</small>
+                <p>Contrary to popular belief,is not simply.</p>
+                <p>Contrary to popular belief.</p>
+                <p>Contrary to popular , is not simply. </p>  
+               <p>To popular belief, is not simply.</p> 
             </div>
         </section>
-        <!-- fouth section -->
-
+        <!-- my plans -->
+        <section>
+            <div class="text-plan">
+                <h1>My Plans</h1>
+            </div>
+            <div class="good-and-bad">
+                <div class="image-text">
+                    <img src="images/icons/web.png" alt="">
+                    <h3>Web Development</h3>
+                    <p>I want to start</p>
+                </div>
+                <div class="image-text">
+                    <img src="images/icons/js.png" alt="">
+                    <h3>Javscript</h3>
+                    <p>I want to learn</p>
+                </div>
+                <div class="image-text">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3>Smoking Habit</h3>
+                    <p>I want to end</p>
+                </div>
+                <div class="image-text">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3>Ecommerce</h3>
+                    <p>I want to Develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- interest section -->
         <section class="interest-section">
-
-            <div class="text-section">
-                <h3>Awlays keep a positive <br> mindset</h3>
-                <button class="btn-section">Call Now</button>
+            <div>
+                <div class="awlays-active">
+                    <h1>Awlays keep a positive <br>
+                        mindset</h1>
+                </div>
+                <div class="btn-padding">
+                    <button class="button-section">Call Now</button>
+                </div>
             </div>
         </section>
+        <!-- happy new year -->
         <section class="strong-section">
             <strong>May Allah grant me sustenance in this year.</strong>
-            <div class="happy-new-year">
+            <div>
                 <img src="images/happy-new-year.jpg" alt="">
             </div>
         </section>
     </main>
+    <!-- fooder section -->
     <footer>
         <div class="bg-color">
             <div class="blog-color">
@@ -87,6 +96,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, distinctio.</p>
                 <p>Email:alamin@gmail.com</p>
                 <p>Phone:01712213121</p>
+                <div class="media-icon">
+                    <img src="images/icons/fb.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+                </div>
             </div>
             <div class="subscribe">
                 <h3>Subscribe</h3>
