--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new-yew-new-me</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/happy-new-year.png" type="image/x-icon">
 </head>
 
 <body>
@@ -33,8 +34,8 @@
                 <h1>My failures of <br> previous year</h1>
                 <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of
                     <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
-                </p>
-                <p>Contrary to popular belief,is not simply.</p>
+                </p><br>
+                <p><i class="fa-regular fa-check">Contrary to popular belief,is not simply.</i></p>
                 <p>Contrary to popular belief.</p>
                 <p>Contrary to popular , is not simply. </p>  
                <p>To popular belief, is not simply.</p> 
