added font awesome icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new-yew-new-me</title>
+    <script src="https://kit.fontawesome.com/b662e3a97a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/happy-new-year.png" type="image/x-icon">
 </head>
@@ -35,10 +36,10 @@
                 <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of
                     <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.
                 </p><br>
-                <p><i class="fa-regular fa-check">Contrary to popular belief,is not simply.</i></p>
-                <p>Contrary to popular belief.</p>
-                <p>Contrary to popular , is not simply. </p>  
-               <p>To popular belief, is not simply.</p> 
+                <p><i class="fa-solid fa-check"></i>Contrary to popular belief,is not simply.</p>
+                <p><i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
+                <p><i class="fa-solid fa-check"></i>Contrary to popular , is not simply. </p>  
+               <p><i class="fa-solid fa-check"></i>To popular belief, is not simply.</p> 
             </div>
         </section>
         <!-- my plans -->
