--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="blog-color">
                 <h3>Future Plan</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, distinctio.</p>
-                <p>Email:alamin@gmail.com</p>
+                <p>Email:alamin017514@gmail.com</p>
                 <p>Phone:01751492367</p>
                 <div class="media-icon">
                     <img src="images/icons/fb.png" alt="">
